# copilot-client.rs

./: Cargo.toml  LICENSE.txt  README.md
examples/: copilot.rs
src/: client.rs  lib.rs  main.rs
