[package]
name = "copilot-client"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A client for the GitHub Copilot API"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
